[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.5"

[[bin]]
name = "memo"
path = "src/memo.rs"

[[bin]]
name = "memo2"
path = "src/memo2.rs"

[[bin]]
name = "memo3"
path = "src/memo3.rs"

[[bin]]
name = "a01"
path = "src/a01.rs"

[[bin]]
name = "a02"
path = "src/a02.rs"

[[bin]]
name = "a03"
path = "src/a03.rs"

[[bin]]
name = "a04"
path = "src/a04.rs"

[[bin]]
name = "a05"
path = "src/a05.rs"

[[bin]]
name = "a06"
path = "src/a06.rs"

[[bin]]
name = "a07"
path = "src/a07.rs"

[[bin]]
name = "a08"
path = "src/a08.rs"

[[bin]]
name = "a09"
path = "src/a09.rs"

[[bin]]
name = "a10"
path = "src/a10.rs"

[[bin]]
name = "a11"
path = "src/a11.rs"

[[bin]]
name = "a12"
path = "src/a12.rs"

[[bin]]
name = "a13"
path = "src/a13.rs"

[[bin]]
name = "a14"
path = "src/a14.rs"

[[bin]]
name = "a15"
path = "src/a15.rs"

[[bin]]
name = "a16"
path = "src/a16.rs"

[[bin]]
name = "a17"
path = "src/a17.rs"

[[bin]]
name = "a18"
path = "src/a18.rs"

[[bin]]
name = "a19"
path = "src/a19.rs"

[[bin]]
name = "a20"
path = "src/a20.rs"

[[bin]]
name = "a21"
path = "src/a21.rs"

[[bin]]
name = "a22"
path = "src/a22.rs"

[[bin]]
name = "a23"
path = "src/a23.rs"

[[bin]]
name = "a24"
path = "src/a24.rs"

[[bin]]
name = "a25"
path = "src/a25.rs"

[[bin]]
name = "a26"
path = "src/a26.rs"

[[bin]]
name = "a27"
path = "src/a27.rs"

[[bin]]
name = "a28"
path = "src/a28.rs"

[[bin]]
name = "a29"
path = "src/a29.rs"

[[bin]]
name = "a30"
path = "src/a30.rs"

[[bin]]
name = "a31"
path = "src/a31.rs"

[[bin]]
name = "a32"
path = "src/a32.rs"

[[bin]]
name = "a33"
path = "src/a33.rs"

[[bin]]
name = "a34"
path = "src/a34.rs"


[[bin]]
name = "b01"
path = "src/b01.rs"

[[bin]]
name = "b02"
path = "src/b02.rs"

[[bin]]
name = "b03"
path = "src/b03.rs"

[[bin]]
name = "b04"
path = "src/b04.rs"

[[bin]]
name = "b06"
path = "src/b06.rs"

[[bin]]
name = "b07"
path = "src/b07.rs"

[[bin]]
name = "b08"
path = "src/b08.rs"

[[bin]]
name = "b09"
path = "src/b09.rs"

[[bin]]
name = "b11"
path = "src/b11.rs"

[[bin]]
name = "b12"
path = "src/b12.rs"

[[bin]]
name = "b13"
path = "src/b13.rs"

[[bin]]
name = "b14"
path = "src/b14.rs"

[[bin]]
name = "b16"
path = "src/b16.rs"

[[bin]]
name = "b17"
path = "src/b17.rs"

[[bin]]
name = "b18"
path = "src/b18.rs"

[[bin]]
name = "b19"
path = "src/b19.rs"

[[bin]]
name = "b20"
path = "src/b20.rs"

[[bin]]
name = "b21"
path = "src/b21.rs"

[[bin]]
name = "b23"
path = "src/b23.rs"

[[bin]]
name = "b24"
path = "src/b24.rs"

