[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.5"
rand = "0.8.5"

[[bin]]
name = "memo"
path = "src/memo.rs"

[[bin]]
name = "memo2"
path = "src/memo2.rs"

[[bin]]
name = "memo3"
path = "src/memo3.rs"

[[bin]]
name = "a01"
path = "src/a01.rs"

[[bin]]
name = "a02"
path = "src/a02.rs"

[[bin]]
name = "a03"
path = "src/a03.rs"

[[bin]]
name = "a04"
path = "src/a04.rs"

[[bin]]
name = "a05"
path = "src/a05.rs"

[[bin]]
name = "a06"
path = "src/a06.rs"

[[bin]]
name = "a07"
path = "src/a07.rs"

[[bin]]
name = "a08"
path = "src/a08.rs"

[[bin]]
name = "a09"
path = "src/a09.rs"

[[bin]]
name = "a10"
path = "src/a10.rs"

[[bin]]
name = "a11"
path = "src/a11.rs"

[[bin]]
name = "a12"
path = "src/a12.rs"

[[bin]]
name = "a13"
path = "src/a13.rs"

[[bin]]
name = "a14"
path = "src/a14.rs"

[[bin]]
name = "a15"
path = "src/a15.rs"

[[bin]]
name = "a16"
path = "src/a16.rs"

[[bin]]
name = "a17"
path = "src/a17.rs"

[[bin]]
name = "a18"
path = "src/a18.rs"

[[bin]]
name = "a19"
path = "src/a19.rs"

[[bin]]
name = "a20"
path = "src/a20.rs"

[[bin]]
name = "a21"
path = "src/a21.rs"

[[bin]]
name = "a22"
path = "src/a22.rs"

[[bin]]
name = "a23"
path = "src/a23.rs"

[[bin]]
name = "a24"
path = "src/a24.rs"

[[bin]]
name = "a25"
path = "src/a25.rs"

[[bin]]
name = "a26"
path = "src/a26.rs"

[[bin]]
name = "a27"
path = "src/a27.rs"

[[bin]]
name = "a28"
path = "src/a28.rs"

[[bin]]
name = "a29"
path = "src/a29.rs"

[[bin]]
name = "a30"
path = "src/a30.rs"

[[bin]]
name = "a31"
path = "src/a31.rs"

[[bin]]
name = "a32"
path = "src/a32.rs"

[[bin]]
name = "a33"
path = "src/a33.rs"

[[bin]]
name = "a34"
path = "src/a34.rs"

[[bin]]
name = "a35"
path = "src/a35.rs"

[[bin]]
name = "a36"
path = "src/a36.rs"

[[bin]]
name = "a37"
path = "src/a37.rs"

[[bin]]
name = "a38"
path = "src/a38.rs"

[[bin]]
name = "a39"
path = "src/a39.rs"

[[bin]]
name = "a40"
path = "src/a40.rs"

[[bin]]
name = "a41"
path = "src/a41.rs"

[[bin]]
name = "a42"
path = "src/a42.rs"

[[bin]]
name = "a43"
path = "src/a43.rs"

[[bin]]
name = "a44"
path = "src/a44.rs"

[[bin]]
name = "a45"
path = "src/a45.rs"

[[bin]]
name = "a46"
path = "src/a46.rs"

[[bin]]
name = "a46-2"
path = "src/a46-2.rs"

[[bin]]
name = "a49"
path = "src/a49.rs"

[[bin]]
name = "a50"
path = "src/a50.rs"

[[bin]]
name = "a51"
path = "src/a51.rs"

[[bin]]
name = "a52"
path = "src/a52.rs"

[[bin]]
name = "a53"
path = "src/a53.rs"

[[bin]]
name = "a54"
path = "src/a54.rs"

[[bin]]
name = "a55"
path = "src/a55.rs"

[[bin]]
name = "a56"
path = "src/a56.rs"

[[bin]]
name = "a57"
path = "src/a57.rs"

[[bin]]
name = "a58"
path = "src/a58.rs"

[[bin]]
name = "a59"
path = "src/a59.rs"

[[bin]]
name = "a60"
path = "src/a60.rs"



[[bin]]
name = "b01"
path = "src/b01.rs"

[[bin]]
name = "b02"
path = "src/b02.rs"

[[bin]]
name = "b03"
path = "src/b03.rs"

[[bin]]
name = "b04"
path = "src/b04.rs"

[[bin]]
name = "b06"
path = "src/b06.rs"

[[bin]]
name = "b07"
path = "src/b07.rs"

[[bin]]
name = "b08"
path = "src/b08.rs"

[[bin]]
name = "b09"
path = "src/b09.rs"

[[bin]]
name = "b11"
path = "src/b11.rs"

[[bin]]
name = "b12"
path = "src/b12.rs"

[[bin]]
name = "b13"
path = "src/b13.rs"

[[bin]]
name = "b14"
path = "src/b14.rs"

[[bin]]
name = "b16"
path = "src/b16.rs"

[[bin]]
name = "b17"
path = "src/b17.rs"

[[bin]]
name = "b18"
path = "src/b18.rs"

[[bin]]
name = "b19"
path = "src/b19.rs"

[[bin]]
name = "b20"
path = "src/b20.rs"

[[bin]]
name = "b21"
path = "src/b21.rs"

[[bin]]
name = "b23"
path = "src/b23.rs"

[[bin]]
name = "b24"
path = "src/b24.rs"

[[bin]]
name = "b26"
path = "src/b26.rs"

[[bin]]
name = "b27"
path = "src/b27.rs"

[[bin]]
name = "b28"
path = "src/b28.rs"

[[bin]]
name = "b29"
path = "src/b29.rs"

[[bin]]
name = "b30"
path = "src/b30.rs"

[[bin]]
name = "b31"
path = "src/b31.rs"

[[bin]]
name = "b32"
path = "src/b32.rs"

[[bin]]
name = "b33"
path = "src/b33.rs"

[[bin]]
name = "b34"
path = "src/b34.rs"

[[bin]]
name = "b36"
path = "src/b36.rs"

[[bin]]
name = "b37"
path = "src/b37.rs"

[[bin]]
name = "b38"
path = "src/b38.rs"

[[bin]]
name = "b39"
path = "src/b39.rs"

[[bin]]
name = "b40"
path = "src/b40.rs"

[[bin]]
name = "b41"
path = "src/b41.rs"

[[bin]]
name = "b42"
path = "src/b42.rs"

[[bin]]
name = "b43"
path = "src/b43.rs"

[[bin]]
name = "b44"
path = "src/b44.rs"

[[bin]]
name = "b45"
path = "src/b45.rs"

[[bin]]
name = "b51"
path = "src/b51.rs"

[[bin]]
name = "b52"
path = "src/b52.rs"

[[bin]]
name = "b54"
path = "src/b54.rs"

[[bin]]
name = "b55"
path = "src/b55.rs"

[[bin]]
name = "b56"
path = "src/b56.rs"

[[bin]]
name = "b57"
path = "src/b57.rs"

[[bin]]
name = "b58"
path = "src/b58.rs"

[[bin]]
name = "b59"
path = "src/b59.rs"